I have no idea...
Kind of have main display, but also don't. Kind of want to get Floating Action Buttons to replace buttons for seperate screens.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,20 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ScoutActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="layout.mainAc.Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="layout.scout.Scout"
+            android:label="@string/title_activity_scout"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
