Changed FAB icons to more reasonable icons.
Added + & - buttons by Match.

Added Home to FAB - Loads Scout Fragment.

Started SQLite implementation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="layout.scout.Scout"
+            android:name=".ScoutActivity"
             android:label="@string/title_activity_scout"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
