--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
         <activity
             android:name=".Application.ScoutActivity"
-            android:label="@string/title_activity_scout"
+            android:label="@string/txActivityScout"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
